IoTDiscover/patriot/parser-generator/PATRIOTParser.py
# Generated from PATRIOT.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PATRIOTParser ( Parser ):

    grammarFileName = "PATRIOT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'state'", "'value'", "'automation_unit'", "'current_time'", 
                     "'current_date'", "'action_command'", "'action_device'", 
                     "'action_command_arg'", "'='", "'!='", "'>'", "'>='", 
                     "'<'", "'<='", "':'", "'('", "')'", "'['", "']'", "','", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "POLICY", "ALLOW", "DENY", "ONLY", "IF", 
                      "EVERYTHING", "NOT", "AND", "OR", "SINCE", "ONCE", 
                      "LASTLY", "WITHIN", "EXCEPT", "BOOLEAN", "STATE", 
                      "KVALUE", "AUTOMATION_UNIT", "CURRENT_TIME", "CURRENT_DATE", 
                      "ACTION_COMMAND", "ACTION_DEVICE", "ACTION_COMMAND_ARG", 
                      "EQ", "NEQ", "GT", "GTE", "LT", "LTE", "COLON", "LPARAN", 
                      "RPARAN", "LBRACKET", "RBRACKET", "COMMA", "FSLASH", 
                      "TIME", "DATE", "UNDERSCORE", "NUMBER", "STRING", 
                      "WS", "ErrorChar" ]

    RULE_policy_language = 0
    RULE_policy_statement = 1
    RULE_body = 2
    RULE_permission_clause = 3
    RULE_target_clause = 4
    RULE_action_clause = 5
    RULE_condition_clause = 6
    RULE_propositional_clause = 7
    RULE_mtl_clause = 8
    RULE_since_clause = 9
    RULE_once_clause = 10
    RULE_lastly_clause = 11
    RULE_boolean_operator = 12
    RULE_attribute = 13
    RULE_device_state = 14
    RULE_device_value = 15
    RULE_date_time_key = 16
    RULE_operator = 17
    RULE_value = 18

    ruleNames =  [ "policy_language", "policy_statement", "body", "permission_clause", 
                   "target_clause", "action_clause", "condition_clause", 
                   "propositional_clause", "mtl_clause", "since_clause", 
                   "once_clause", "lastly_clause", "boolean_operator", "attribute", 
                   "device_state", "device_value", "date_time_key", "operator", 
                   "value" ]

    EOF = Token.EOF
    POLICY=1
    ALLOW=2
    DENY=3
    ONLY=4
    IF=5
    EVERYTHING=6
    NOT=7
    AND=8
    OR=9
    SINCE=10
    ONCE=11
    LASTLY=12
    WITHIN=13
    EXCEPT=14
    BOOLEAN=15
    STATE=16
    KVALUE=17
    AUTOMATION_UNIT=18
    CURRENT_TIME=19
    CURRENT_DATE=20
    ACTION_COMMAND=21
    ACTION_DEVICE=22
    ACTION_COMMAND_ARG=23
    EQ=24
    NEQ=25
    GT=26
    GTE=27
    LT=28
    LTE=29
    COLON=30
    LPARAN=31
    RPARAN=32
    LBRACKET=33
    RBRACKET=34
    COMMA=35
    FSLASH=36
    TIME=37
    DATE=38
    UNDERSCORE=39
    NUMBER=40
    STRING=41
    WS=42
    ErrorChar=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Policy_languageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PATRIOTParser.EOF, 0)

        def policy_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATRIOTParser.Policy_statementContext)
            else:
                return self.getTypedRuleContext(PATRIOTParser.Policy_statementContext,i)


        def getRuleIndex(self):
            return PATRIOTParser.RULE_policy_language

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy_language" ):
                listener.enterPolicy_language(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy_language" ):
                listener.exitPolicy_language(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy_language" ):
                return visitor.visitPolicy_language(self)
            else:
                return visitor.visitChildren(self)




    def policy_language(self):

        localctx = PATRIOTParser.Policy_languageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy_language)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.policy_statement()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PATRIOTParser.POLICY):
                    break

            self.state = 43
            self.match(PATRIOTParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Policy_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POLICY(self):
            return self.getToken(PATRIOTParser.POLICY, 0)

        def STRING(self):
            return self.getToken(PATRIOTParser.STRING, 0)

        def COLON(self):
            return self.getToken(PATRIOTParser.COLON, 0)

        def body(self):
            return self.getTypedRuleContext(PATRIOTParser.BodyContext,0)


        def getRuleIndex(self):
            return PATRIOTParser.RULE_policy_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy_statement" ):
                listener.enterPolicy_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy_statement" ):
                listener.exitPolicy_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy_statement" ):
                return visitor.visitPolicy_statement(self)
            else:
                return visitor.visitChildren(self)




    def policy_statement(self):

        localctx = PATRIOTParser.Policy_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_policy_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(PATRIOTParser.POLICY)
            self.state = 46
            self.match(PATRIOTParser.STRING)
            self.state = 47
            self.match(PATRIOTParser.COLON)
            self.state = 48
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def permission_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Permission_clauseContext,0)


        def target_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Target_clauseContext,0)


        def EXCEPT(self):
            return self.getToken(PATRIOTParser.EXCEPT, 0)

        def condition_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATRIOTParser.Condition_clauseContext)
            else:
                return self.getTypedRuleContext(PATRIOTParser.Condition_clauseContext,i)


        def ONLY(self):
            return self.getToken(PATRIOTParser.ONLY, 0)

        def IF(self):
            return self.getToken(PATRIOTParser.IF, 0)

        def getRuleIndex(self):
            return PATRIOTParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = PATRIOTParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_body)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.permission_clause()
                self.state = 51
                self.target_clause()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.permission_clause()
                self.state = 54
                self.target_clause()
                self.state = 55
                self.match(PATRIOTParser.EXCEPT)
                self.state = 56
                self.condition_clause()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.permission_clause()
                self.state = 59
                self.target_clause()
                self.state = 60
                self.match(PATRIOTParser.ONLY)
                self.state = 61
                self.match(PATRIOTParser.IF)
                self.state = 62
                self.condition_clause()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.permission_clause()
                self.state = 65
                self.target_clause()
                self.state = 66
                self.match(PATRIOTParser.ONLY)
                self.state = 67
                self.match(PATRIOTParser.IF)
                self.state = 68
                self.condition_clause()
                self.state = 69
                self.match(PATRIOTParser.EXCEPT)
                self.state = 70
                self.condition_clause()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Permission_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALLOW(self):
            return self.getToken(PATRIOTParser.ALLOW, 0)

        def DENY(self):
            return self.getToken(PATRIOTParser.DENY, 0)

        def getRuleIndex(self):
            return PATRIOTParser.RULE_permission_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPermission_clause" ):
                listener.enterPermission_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPermission_clause" ):
                listener.exitPermission_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPermission_clause" ):
                return visitor.visitPermission_clause(self)
            else:
                return visitor.visitChildren(self)




    def permission_clause(self):

        localctx = PATRIOTParser.Permission_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_permission_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not(_la==PATRIOTParser.ALLOW or _la==PATRIOTParser.DENY):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Target_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVERYTHING(self):
            return self.getToken(PATRIOTParser.EVERYTHING, 0)

        def action_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Action_clauseContext,0)


        def getRuleIndex(self):
            return PATRIOTParser.RULE_target_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarget_clause" ):
                listener.enterTarget_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarget_clause" ):
                listener.exitTarget_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTarget_clause" ):
                return visitor.visitTarget_clause(self)
            else:
                return visitor.visitChildren(self)




    def target_clause(self):

        localctx = PATRIOTParser.Target_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_target_clause)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PATRIOTParser.EVERYTHING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(PATRIOTParser.EVERYTHING)
                pass
            elif token in [PATRIOTParser.ACTION_COMMAND, PATRIOTParser.ACTION_DEVICE, PATRIOTParser.ACTION_COMMAND_ARG]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.action_clause(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Action_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTION_COMMAND(self):
            return self.getToken(PATRIOTParser.ACTION_COMMAND, 0)

        def operator(self):
            return self.getTypedRuleContext(PATRIOTParser.OperatorContext,0)


        def STRING(self):
            return self.getToken(PATRIOTParser.STRING, 0)

        def ACTION_DEVICE(self):
            return self.getToken(PATRIOTParser.ACTION_DEVICE, 0)

        def ACTION_COMMAND_ARG(self):
            return self.getToken(PATRIOTParser.ACTION_COMMAND_ARG, 0)

        def value(self):
            return self.getTypedRuleContext(PATRIOTParser.ValueContext,0)


        def action_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATRIOTParser.Action_clauseContext)
            else:
                return self.getTypedRuleContext(PATRIOTParser.Action_clauseContext,i)


        def boolean_operator(self):
            return self.getTypedRuleContext(PATRIOTParser.Boolean_operatorContext,0)


        def getRuleIndex(self):
            return PATRIOTParser.RULE_action_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction_clause" ):
                listener.enterAction_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction_clause" ):
                listener.exitAction_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction_clause" ):
                return visitor.visitAction_clause(self)
            else:
                return visitor.visitChildren(self)



    def action_clause(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PATRIOTParser.Action_clauseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_action_clause, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PATRIOTParser.ACTION_COMMAND]:
                self.state = 81
                self.match(PATRIOTParser.ACTION_COMMAND)
                self.state = 82
                self.operator()
                self.state = 83
                self.match(PATRIOTParser.STRING)
                pass
            elif token in [PATRIOTParser.ACTION_DEVICE]:
                self.state = 85
                self.match(PATRIOTParser.ACTION_DEVICE)
                self.state = 86
                self.operator()
                self.state = 87
                self.match(PATRIOTParser.STRING)
                pass
            elif token in [PATRIOTParser.ACTION_COMMAND_ARG]:
                self.state = 89
                self.match(PATRIOTParser.ACTION_COMMAND_ARG)
                self.state = 90
                self.operator()
                self.state = 91
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PATRIOTParser.Action_clauseContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_action_clause)
                    self.state = 95
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 96
                    self.boolean_operator()
                    self.state = 97
                    self.action_clause(2) 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Condition_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propositional_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Propositional_clauseContext,0)


        def boolean_operator(self):
            return self.getTypedRuleContext(PATRIOTParser.Boolean_operatorContext,0)


        def mtl_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Mtl_clauseContext,0)


        def getRuleIndex(self):
            return PATRIOTParser.RULE_condition_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_clause" ):
                listener.enterCondition_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_clause" ):
                listener.exitCondition_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_clause" ):
                return visitor.visitCondition_clause(self)
            else:
                return visitor.visitChildren(self)




    def condition_clause(self):

        localctx = PATRIOTParser.Condition_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition_clause)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.propositional_clause(0)
                self.state = 105
                self.boolean_operator()
                self.state = 106
                self.mtl_clause(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.mtl_clause(0)
                self.state = 109
                self.boolean_operator()
                self.state = 110
                self.propositional_clause(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.mtl_clause(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.propositional_clause(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Propositional_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(PATRIOTParser.AttributeContext,0)


        def operator(self):
            return self.getTypedRuleContext(PATRIOTParser.OperatorContext,0)


        def value(self):
            return self.getTypedRuleContext(PATRIOTParser.ValueContext,0)


        def NOT(self):
            return self.getToken(PATRIOTParser.NOT, 0)

        def propositional_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATRIOTParser.Propositional_clauseContext)
            else:
                return self.getTypedRuleContext(PATRIOTParser.Propositional_clauseContext,i)


        def boolean_operator(self):
            return self.getTypedRuleContext(PATRIOTParser.Boolean_operatorContext,0)


        def getRuleIndex(self):
            return PATRIOTParser.RULE_propositional_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropositional_clause" ):
                listener.enterPropositional_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropositional_clause" ):
                listener.exitPropositional_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropositional_clause" ):
                return visitor.visitPropositional_clause(self)
            else:
                return visitor.visitChildren(self)



    def propositional_clause(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PATRIOTParser.Propositional_clauseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_propositional_clause, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PATRIOTParser.STATE, PATRIOTParser.KVALUE, PATRIOTParser.AUTOMATION_UNIT, PATRIOTParser.CURRENT_TIME, PATRIOTParser.CURRENT_DATE]:
                self.state = 117
                self.attribute()
                self.state = 118
                self.operator()
                self.state = 119
                self.value()
                pass
            elif token in [PATRIOTParser.NOT]:
                self.state = 121
                self.match(PATRIOTParser.NOT)
                self.state = 122
                self.propositional_clause(2)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PATRIOTParser.Propositional_clauseContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_propositional_clause)
                    self.state = 125
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 126
                    self.boolean_operator()
                    self.state = 127
                    self.propositional_clause(2) 
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Mtl_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def since_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Since_clauseContext,0)


        def once_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Once_clauseContext,0)


        def lastly_clause(self):
            return self.getTypedRuleContext(PATRIOTParser.Lastly_clauseContext,0)


        def NOT(self):
            return self.getToken(PATRIOTParser.NOT, 0)

        def mtl_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATRIOTParser.Mtl_clauseContext)
            else:
                return self.getTypedRuleContext(PATRIOTParser.Mtl_clauseContext,i)


        def boolean_operator(self):
            return self.getTypedRuleContext(PATRIOTParser.Boolean_operatorContext,0)


        def getRuleIndex(self):
            return PATRIOTParser.RULE_mtl_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMtl_clause" ):
                listener.enterMtl_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMtl_clause" ):
                listener.exitMtl_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMtl_clause" ):
                return visitor.visitMtl_clause(self)
            else:
                return visitor.visitChildren(self)



    def mtl_clause(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PATRIOTParser.Mtl_clauseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_mtl_clause, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PATRIOTParser.SINCE]:
                self.state = 135
                self.since_clause()
                pass
            elif token in [PATRIOTParser.ONCE]:
                self.state = 136
                self.once_clause()
                pass
            elif token in [PATRIOTParser.LASTLY]:
                self.state = 137
                self.lastly_clause()
                pass
            elif token in [PATRIOTParser.NOT]:
                self.state = 138
                self.match(PATRIOTParser.NOT)
                self.state = 139
                self.mtl_clause(2)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PATRIOTParser.Mtl_clauseContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_mtl_clause)
                    self.state = 142
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 143
                    self.boolean_operator()
                    self.state = 144
                    self.mtl_clause(2) 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Since_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINCE(self):
            return self.getToken(PATRIOTParser.SINCE, 0)

        def LPARAN(self):
            return self.getToken(PATRIOTParser.LPARAN, 0)

        def condition_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATRIOTParser.Condition_clauseContext)
            else:
                return self.getTypedRuleContext(PATRIOTParser.Condition_clauseContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PATRIOTParser.COMMA)
            else:
                return self.getToken(PATRIOTParser.COMMA, i)

        def RPARAN(self):
            return self.getToken(PATRIOTParser.RPARAN, 0)

        def WITHIN(self):
            return self.getToken(PATRIOTParser.WITHIN, 0)

        def LBRACKET(self):
            return self.getToken(PATRIOTParser.LBRACKET, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(PATRIOTParser.NUMBER)
            else:
                return self.getToken(PATRIOTParser.NUMBER, i)

        def RBRACKET(self):
            return self.getToken(PATRIOTParser.RBRACKET, 0)

        def getRuleIndex(self):
            return PATRIOTParser.RULE_since_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSince_clause" ):
                listener.enterSince_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSince_clause" ):
                listener.exitSince_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSince_clause" ):
                return visitor.visitSince_clause(self)
            else:
                return visitor.visitChildren(self)




    def since_clause(self):
